# CodeSentinel

./: .dockerignore  .flake8  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.zh-CN.md  RELEASE_GUIDE.md  __init__.py  docker-compose.dev.yml  docker-compose.yml  main.py  mypy.ini  optimization_summary.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  code-quality.yml
CodeSentinel-Final/: .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  README.md  README.zh-CN.md  RELEASE_SUMMARY.md  main.py  pyproject.toml
CodeSentinel-Final/docs/: .env.example
CodeSentinel-Final/examples/: advanced-usage.md
CodeSentinel-Final/src/application/: ai_analyzer.py  local_analyzer.py  multi_language_analyzer.py  report_generators.py
CodeSentinel-Final/src/core/: container.py  input_validator.py  interfaces.py
CodeSentinel-Final/src/core/analyzers/: analysis_types.py  base_analyzer.py  javascript_analyzer.py  taint_analyzer.py
CodeSentinel-Final/src/infrastructure/: __init__.py  ascii_art.py  cache_manager.py  monitoring.py  plugin_manager.py  progress_reporter.py
archive/: README.md  prepare_report.md  report.md
config/: default.json
docs/: README.md
docs/api/: analyzers.md  infrastructure.md  interfaces.md
examples/: getting-started.md  plugin-development.md
release/: README.md
scripts/: create_release.py  setup.bat  setup.sh
src/application/: __init__.py  ai_analyzer.py  hybrid_analyzer.py  local_analyzer.py  multi_language_analyzer.py  report_generators.py
src/core/: container.py  input_validator.py  interfaces.py
src/core/analyzers/: __init__.py  base_analyzer.py  javascript_analyzer.py  large_file_analyzer.py  taint_analyzer.py
src/infrastructure/: __init__.py  ascii_art.py  auth_manager.py  cache_manager.py  config_manager.py  error_handler.py  external_analyzers.py  monitoring.py  plugin_manager.py  privacy_manager.py  progress_reporter.py  ui_manager.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_base_analyzer.py  test_interfaces.py  test_multi_language_analyzer.py
